@@ -105,9 +105,9 @@ namespace dbarts {
     
     void rebuildScratchFromState();
     
-    void printTrees(const std::size_t* chains, std::size_t numChains,
-                    const std::size_t* samples, std::size_t numSamples,
-                    const std::size_t* indices, std::size_t numIndices) const;
+    void printTrees(const std::size_t* chainIndices, std::size_t numChainIndices,
+                    const std::size_t* sampleIndices, std::size_t numSampleIndices,
+                    const std::size_t* treeIndices, std::size_t numTreeIndices) const;
     FlattenedTrees* getFlattenedTrees(const std::size_t* chainIndices,  std::size_t numChainIndices,
                                       const std::size_t* sampleIndices, std::size_t numSampleIndices,
                                       const std::size_t* treeIndices,   std::size_t numTreeIndices) const;
