@@ -91,12 +91,25 @@ extern "C" {
     fit->printInitialSummary();
   }
   void dbarts_printTrees(const dbarts::BARTFit* fit,
-                         const std::size_t* chains, std::size_t numChains,
-                         const std::size_t* samples, std::size_t numSamples,
-                         const std::size_t* indices, std::size_t numIndices)
+                         const std::size_t* chainIndices,  std::size_t numChainIndices,
+                         const std::size_t* sampleIndices, std::size_t numSampleIndices,
+                         const std::size_t* treeIndices,   std::size_t numTreeIndices)
   {
-    fit->printTrees(chains, numChains, samples, numSamples, indices, numIndices);
+    fit->printTrees(chainIndices,  numChainIndices,
+                    sampleIndices, numSampleIndices,
+                    treeIndices,   numTreeIndices);
   }
+
+  FlattenedTrees* dbarts_getTrees(const dbarts::BARTFit* fit,
+                                  const std::size_t* chainIndices,  std::size_t numChainIndices,
+                                  const std::size_t* sampleIndices, std::size_t numSampleIndices,
+                                  const std::size_t* treeIndices,   std::size_t numTreeIndices)
+  {
+    return fit->getFlattenedTrees(chainIndices,  numChainIndices,
+                                  sampleIndices, numSampleIndices,
+                                  treeIndices,   numTreeIndices);
+  }
+
   Results* dbarts_runSampler(BARTFit* fit) {
     return fit->runSampler();
   }
